docker/kube-infra/prefect-queue.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-queue
spec:
  selector:
    matchLabels:
      app: orion-queue
  replicas: 1
  template:
    metadata:
      labels:
        app: orion-queue
    spec:
      containers:
        - name: orion-queue
          image: prefecthq/prefect:2.0b8-python3.9
          command: ["prefect", "work-queue", "create", "default-queue"]
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 4200
