docker/kube-infra/fastflows.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastflows
spec:
  selector:
    matchLabels:
      app: fastflows
  replicas: 2
  template:
    metadata:
      labels:
        app: fastflows
    spec:
      containers:
        - name: main
          image: geobeyond/fastflows:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5010
          command: ["fastflows", "server"]
          volumeMounts:
            - mountPath: /flows
              name: fastflows-volume
      volumes:
        - name: fastflows-volume
          persistentVolumeClaim:
            claimName: fastflows-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: fastflows
  labels:
    app: fastflows
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5010
      targetPort: 5010
  selector:
    app: fastflows
