docker/kube-infra/prefect.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion
spec:
  selector:
    matchLabels:
      app: orion
  replicas: 2
  template:
    metadata:
      labels:
        app: orion
    spec:
      containers:
        - name: api
          image: prefecthq/prefect:2.1.1-python3.9
          command:
            [
              "prefect",
              "orion",
              "start",
              "--host",
              "0.0.0.0",
              "--log-level",
              "DEBUG",
            ]
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 4200
        - name: agent
          image: prefecthq/prefect:2.1.1-python3.9
          command: ["prefect", "agent", "start", "kubernetes"]
          imagePullPolicy: "IfNotPresent"
---
apiVersion: v1
kind: Service
metadata:
  name: orion
  labels:
    app: orion
spec:
  ports:
    - port: 4200
      targetPort: 4200
      protocol: TCP
  selector:
    app: orion
