docker/kube-infra/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fastflows-api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: Service
          name: fastflows
          namespace: default
          port: 5010
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: orion-api
spec:
  entryPoints:
    - other
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: Service
          name: orion
          namespace: default
          port: 4200
